object.mode_set keymap does not work in toggle mode in 2.83 (regression from 2.82) #77217

Closed
opened 2020-05-31 09:55:10 +02:00 by Ludvik Koutny · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75

Blender Version
Broken: version: 2.83.0 Beta, branch: master, commit date: 2020-05-29 17:42, hash: 691a1e3357
Worked: 2.82a

Short description of error
object.mode_set in Toggle mode no longer works as a keymap entry in 2.83. In 2.82, when object.mode_set is assigned to key in Toggle mode, pressing the key in object mode enters last active non-object mode and pressing the key in edit mode again exits to object mode. In 2.83, the toggle is broken.
image.png

Exact steps for others to reproduce the error

  1. Assign a key mapping to 3D View->Object Non-Modal->object.mode_set operator.
  2. Set the operator Mode to Object Mode and make sure "Toggle" is enabled
  3. Test in 2.82, notice it works correctly (The same key enters and exits edit mode)
  4. Test in 2.83, notice it is broken

Result: The object.mode_set operator in toggle mode does not toggle between Object Mode and last used Non-Object mode
Expected: The object.mode_set operator in toggle mode correctly toggles the Object Mode (As in 2.82a)

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75 **Blender Version** Broken: version: 2.83.0 Beta, branch: master, commit date: 2020-05-29 17:42, hash: `691a1e3357` Worked: 2.82a **Short description of error** object.mode_set in Toggle mode no longer works as a keymap entry in 2.83. In 2.82, when object.mode_set is assigned to key in Toggle mode, pressing the key in object mode enters last active non-object mode and pressing the key in edit mode again exits to object mode. In 2.83, the toggle is broken. ![image.png](https://archive.blender.org/developer/F8567086/image.png) **Exact steps for others to reproduce the error** 1. Assign a key mapping to 3D View->Object Non-Modal->object.mode_set operator. 2. Set the operator Mode to Object Mode and make sure "Toggle" is enabled 3. Test in 2.82, notice it works correctly (The same key enters and exits edit mode) 4. Test in 2.83, notice it is broken Result: The object.mode_set operator in toggle mode does not toggle between Object Mode and last used Non-Object mode Expected: The object.mode_set operator in toggle mode correctly toggles the Object Mode (As in 2.82a)
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche

This issue was referenced by c204e3348c

This issue was referenced by c204e3348c858a5b1c02af14eb832695a5521b75

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-06-01 11:00:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77217
No description provided.